responsive issue solve

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1 class="text-center text-white text-3xl capitalize font-semibold mb-7">My Text Editor</h1>
             </div>
             <div class="text-box-main ">
-                <div class="editor-icon-box flex justify-between p-3 bg-slate-500 mt-5 rounded-tl-lg rounded-tr-lg">
+                <div class="editor-icon-box grid grid-cols-2 md:grid-cols-3 justify-between p-3 bg-slate-500 mt-5 rounded-tl-lg rounded-tr-lg">
                     <div class="flex gap-2">
                         <div id="bold-icon-style" class="bold-icon hover:bg-slate-800 p-3 rounded-xl"><i class="fa-solid fa-bold"></i></div>
                         <div id="italic-icon" class=" hover:bg-slate-800 p-3 rounded-xl"><i class="fa-solid fa-italic"></i></div>
