comment box add

--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
                 </div>
             </div>
         </section>
+
+        <section class="mt-9 "> <hr>
+            <div id="Comment-box" class="comment-box bg-slate-700 p-5 rounded-3xl mt-5">
+            
+            </div>
+        </section>
+
     </main>
 
 
